--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@ Dataset/*
 
 # Ignorar todo el contenido de la carpeta detectron2
 detectron2/
+
+# Ignorar todo el contenido de la carpeta
+models/
+
+# Modelos de YOLO y Detectron
+*.pth 
+*.pt
